--- a/src/main/webapp/admin/specimenManager.xhtml
+++ b/src/main/webapp/admin/specimenManager.xhtml
@@ -23,7 +23,7 @@
 						<div class="input-group">
 							<p:commandButton id="deleteYesButton" value="Eliminar"
 								action="#{specimenContentBean.delete}"
-								update="formSpecimen, deleteSCModalForm, editSCModalForm, createSCModalForm"
+								update="formSpecimen, editSCModalForm, createSCModalForm"
 								oncomplete="$('#deleteModal').modal('hide')" />
 							<p:commandButton id="deleteNoButton" value="Cancelar"
 								type="button"
@@ -36,7 +36,7 @@
 		</div>
 	</h:form>
 
-	<h:form id="editSCModalForm" enctype="multipart/form-data">
+	<h:form id="editSCModalForm">
 		<div class="modal fade" id="editModal" tabindex="-1" role="dialog"
 			aria-labelledby="Editar Autor">
 			<div class="modal-dialog" role="document">
@@ -46,51 +46,52 @@
 							aria-label="Close">
 							<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
 						</button>
-						<h4 class="modal-title" id="myModalLabel">Editar Contenido</h4>
+						<h4 class="modal-title" id="myModalLabel">Crear Contenido</h4>
 					</div>
 					<div class="modal-body">
-						<div class="form-group">
-							<div class="row">
-								<label class="col-md-4 control-label" for="fileName">Archivo
-									actual:</label>
-								<div class="col-md-8">
-									<h:inputText id="fileName"
-										styleClass="ui-state-default form-control input-sm input-block-level "
-										value="#{specimenContentBean.specimenContent.fileName}">
-										<p:ajax process="@this" />
-										<f:validateBean disabled="true" />
-									</h:inputText>
-								</div>
+						<div class="row">
+							<label class="col-md-4 control-label" for="fileName">Archivo
+								actual:</label>
+							<div class="col-md-8">
+								<h:inputText id="fileName" disabled="true"
+									styleClass="ui-state-default form-control input-sm input-block-level"
+									value="#{specimenContentBean.specimenContent.fileName}" />
 							</div>
-							<hr />
-							<div class="row">
-								<label class="col-md-4 control-label" for="loadDate">Actualizar
-									Archivo:</label>
-								<div class="col-md-8">
-									<p:fileUpload mode="single" fileLimit="1" label="Adjuntar"
-										fileUploadListener="#{specimenContentBean.handleFileUpload()}"
-										invalidFileMessage="Debe ser un archivo de imagen!!"
-										skinSimple="true" />
-								</div>
+						</div>
+						<hr />
+						<div class="row">
+							<label class="col-md-4 control-label" for="loadDate">Actualizar
+								Archivo:</label>
+						</div>
+						<div class="row">
+							<div class="col-md-12">
+								<p:fileUpload mode="advanced" label="Adjuntar"
+									uploadLabel="Subir" cancelLabel="Cancelar" auto="true"
+									fileUploadListener="#{specimenContentBean.handleFileUpload}"
+									invalidFileMessage="Debe ser un archivo de imagen!!"
+									skinSimple="true" update="createSCModalForm:fileName">
+									<f:validateBean disabled="true" />
+								</p:fileUpload>
 							</div>
+						</div>
 
-							<hr />
-							<div class="row">
-								<label class="col-md-4 control-label" for="specimen">Espécimen:</label>
-								<div class="col-md-8">
-									<p:autoComplete id="specimen" dropdown="true" required="true"
-										value="#{specimenContentBean.specimenContent.idSpecimen}"
-										completeMethod="#{specimenContentBean.specimenQuery}"
-										var="spc"
-										itemLabel="#{spc.idTaxonomy.taxonomyName} #{spc.specificEpithet}"
-										itemValue="#{spc}" forceSelection="true"
-										converter="SpecimenConverter">
-										<p:ajax process="@this" />
-									</p:autoComplete>
-								</div>
+						<hr />
+						<div class="row">
+							<label class="col-md-4 control-label" for="specimen">Espécimen:</label>
+							<div class="col-md-8">
+								<p:autoComplete id="specimen" dropdown="true"
+									value="#{specimenContentBean.specimenContent.idSpecimen}"
+									completeMethod="#{specimenContentBean.specimenQuery}" var="spc"
+									itemLabel="#{spc.idTaxonomy.taxonomyName} #{spc.specificEpithet}"
+									itemValue="#{spc}" forceSelection="true"
+									converter="SpecimenConverter">
+									<p:ajax process="@this" />
+								</p:autoComplete>
 							</div>
-							<div class="row">
-								<label class="col-md-4 control-label" for="desc">Descripción:</label>
+						</div>
+						<div class="row">
+							<label class="col-md-4 control-label" for="desc">Descripción:</label>
+							<div class="col-md-8">
 								<p:inputTextarea id="desc"
 									value="#{specimenContentBean.specimenContent.shortDescription}"
 									rows="3" title="Descripción del pie de la imagen">
@@ -98,24 +99,25 @@
 									<f:validateBean disabled="true" />
 								</p:inputTextarea>
 							</div>
-							<div class="row">
-								<label class="col-md-4 control-label" for="level">Publicar:</label>
-								<div class="col-md-8">
-									<p:selectBooleanCheckbox id="published"
-										value="#{specimenContentBean.publish}" />
-								</div>
+						</div>
+						<div class="row">
+							<label class="col-md-4 control-label" for="level">Publicar:</label>
+							<div class="col-md-8">
+								<p:selectBooleanCheckbox id="published"
+									value="#{specimenContentBean.specimenContent.publish}" />
 							</div>
 						</div>
 					</div>
 					<div class="modal-footer">
 						<div class="input-group">
 							<p:commandButton id="editYesButton" value="Guardar"
-								oncomplete="$('#editModal').modal('hide')"
+								action="#{specimenContentBean.edit()}"
 								update="formSpecimen, deleteSCModalForm, createSCModalForm"
-								actionListener="#{specimenContentBean.edit()}" />
+								oncomplete="$('#editModal').modal('hide')" />
 							<p:commandButton id="editNoButton" value="Cancelar"
-								oncomplete="$('#editModal').modal('hide')"
-								update="formSpecimen, deleteSCModalForm, createSCModalForm" />
+								action="#{specimenContentBean.limpiarFiltros()}"
+								update="formSpecimen"
+								oncomplete=" $('#editModal').modal('hide')" />
 						</div>
 					</div>
 				</div>
@@ -169,8 +171,7 @@
 						<div class="row">
 							<label class="col-md-4 control-label" for="specimen">Espécimen:</label>
 							<div class="col-md-8">
-								<p:autoComplete id="specimen" dropdown="true" required="true"
-									requiredMessage="El ejemplar es obligatorio"
+								<p:autoComplete id="specimen" dropdown="true"
 									value="#{specimenContentBean.specimenContent.idSpecimen}"
 									completeMethod="#{specimenContentBean.specimenQuery}" var="spc"
 									itemLabel="#{spc.idTaxonomy.taxonomyName} #{spc.specificEpithet}"
@@ -195,7 +196,7 @@
 							<label class="col-md-4 control-label" for="level">Publicar:</label>
 							<div class="col-md-8">
 								<p:selectBooleanCheckbox id="published"
-									value="#{specimenContentBean.publish}" />
+									value="#{specimenContentBean.specimenContent.publish}" />
 							</div>
 						</div>
 					</div>
@@ -226,7 +227,7 @@
 						<label class="col-md-1 control-label" for="specimen">Especimen:</label>
 						<div class="col-md-2">
 							<p:autoComplete id="specimen" dropdown="true"
-								value="#{specimenContentBean.specimenContent.idSpecimen}"
+								value="#{specimenContentBean.specimenContentSearch.idSpecimen}"
 								completeMethod="#{specimenContentBean.specimenQuery}" var="spc"
 								itemLabel="#{spc.idTaxonomy.taxonomyName} #{spc.specificEpithet}"
 								itemValue="#{spc}" forceSelection="true"
@@ -239,7 +240,7 @@
 						<div class="col-md-2">
 							<h:inputText id="nombreArchivo"
 								styleClass="ui-state-default form-control input-sm input-block-level "
-								value="#{specimenContentBean.specimenContent.fileName}">
+								value="#{specimenContentBean.specimenContentSearch.fileName}">
 								<p:ajax process="@this" />
 								<f:validateBean disabled="true" />
 							</h:inputText>
@@ -247,7 +248,7 @@
 						<label class="col-md-1 control-label" for="published">Publicado:</label>
 						<div class="col-md-2">
 							<p:selectBooleanCheckbox id="published"
-								value="#{specimenContentBean.publish}" />
+								value="#{specimenContentBean.specimenContentSearch.publish}" />
 						</div>
 					</div>
 				</div>
@@ -266,7 +267,7 @@
 				<p:commandButton id="clear"
 					actionListener="#{specimenContentBean.limpiarFiltros()}"
 					update="formSpecimen" value="Limpiar" />
-				<p:commandButton id="createButton" value="Crear nuevo autor"
+				<p:commandButton id="createButton" value="Crear nuevo contenido"
 					oncomplete="$('#createModal').modal({backdrop: false})"
 					update="formSpecimen, deleteSCModalForm, editSCModalForm, createSCModalForm" />
 			</div>
@@ -275,13 +276,10 @@
 				value="#{specimenContentBean.searchSpecimenContent}"
 				var="specimenContent" styleClass="table table-hover table-condensed">
 				<h:column>
-					<f:facet name="header">Nombre Científico</f:facet>
-					<h:outputText
-						value="#{specimenContent.idSpecimen.idTaxonomy.taxonomyName} #{specimenContent.idSpecimen.specificEpithet}" />
-				</h:column>
-				<h:column>
-					<f:facet name="header">Nombre Común</f:facet>
-					<h:outputText value="#{specimenContent.idSpecimen.commonName}" />
+					<f:facet name="header">Ejemplar</f:facet>
+						#{specimenContent.idSpecimen.commonName}<br />
+					<i><b>#{specimenContent.idSpecimen.idTaxonomy.taxonomyName}
+							#{specimenContent.idSpecimen.specificEpithet}</b></i>
 				</h:column>
 				<h:column>
 					<f:facet name="header">Fecha de Determinación</f:facet>
@@ -302,23 +300,21 @@
 					<p:commandLink id="viewButton"
 						class="btn btn-default btn-sm btn-action"
 						oncomplete="PF('specimenDetail').show()"
-						title="Ficha técnica de #{specimen.commonName}"
-						actionListener="#{specimenContentBean.setSpecimenContent(specimen)}">
+						title="Ficha técnica de #{specimen.commonName}">
 						<span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span>
 					</p:commandLink>
 					<p:commandLink id="editButton"
 						class="btn btn-default btn-sm btn-action"
-						oncomplete="PF('specimenWizard').show()"
-						update=":formDialog :specimenWizardForm"
-						title="Editar #{specimen.commonName}"
-						actionListener="#{specimenContentBean.setSpecimenContent(specimen)}">
+						oncomplete="$('#editModal').modal({backdrop: false})"
+						update="editSCModalForm" title="Editar #{specimen.commonName}"
+						actionListener="#{specimenContentBean.setSpecimenContent(specimenContent)}">
 						<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
 					</p:commandLink>
 					<p:commandLink id="deleteButton"
 						class="btn btn-default btn-sm btn-action"
 						oncomplete="$('#deleteModal').modal({backdrop: false})"
 						title="Eliminar #{specimen.commonName}"
-						actionListener="#{specimenContentBean.setSpecimen(specimen)}">
+						actionListener="#{specimenContentBean.setSpecimenContent(specimenContent)}">
 						<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
 					</p:commandLink>
 				</h:column>
