Cambios en los usuarios en su nivel de acceso
Implementamos binario para permisos
Gestión de Usuarios
Inicio de Gestion de modulos y roles

--- a/src/main/webapp/admin/index.xhtml
+++ b/src/main/webapp/admin/index.xhtml
@@ -46,7 +46,7 @@
                                         <p>#{module.moduleName}</p>
                                     </ui:fragment>
                                     <ui:fragment rendered="#{module.modulePage != null}">
-                                        <h:commandLink value="#{module.moduleName}">
+                                        <h:commandLink value="#{module.moduleName}" title="#{module.moduleDescr}">
                                             <f:setPropertyActionListener value="#{module.modulePage}" target="#{navigationBean.navigablePage}"/>
                                             <i class="#{module.moduleIcon}"></i>
                                         </h:commandLink>
