--- a/src/main/webapp/admin/author.xhtml
+++ b/src/main/webapp/admin/author.xhtml
@@ -51,7 +51,7 @@
 					<div class="modal-body">
 						<div class="form-group">
 							<div class="row">
-								<label class="col-md-4 control-label" for="taxName">Nombre
+								<label class="col-md-4 control-label" for="authorName">Nombre
 									Autor:</label>
 								<div class="col-md-8">
 									<h:inputText id="authorName"
@@ -69,7 +69,7 @@
 								<div class="col-md-8">
 									<div class="row">
 										<div class="col-md-1">
-											<p:selectBooleanCheckbox
+											<p:selectBooleanCheckbox id="authorEpithet"
 												value="#{authorBean.selectedAuthorTypes.authorEpithet}">
 												<p:ajax process="@this" />
 											</p:selectBooleanCheckbox>
@@ -78,7 +78,7 @@
 									</div>
 									<div class="row">
 										<div class="col-md-1">
-											<p:selectBooleanCheckbox
+											<p:selectBooleanCheckbox id="determiner"
 												value="#{authorBean.selectedAuthorTypes.determiner}">
 												<p:ajax process="@this" />
 											</p:selectBooleanCheckbox>
@@ -87,7 +87,7 @@
 									</div>
 									<div class="row">
 										<div class="col-md-1">
-											<p:selectBooleanCheckbox
+											<p:selectBooleanCheckbox id="collector"
 												value="#{authorBean.selectedAuthorTypes.collector}">
 												<p:ajax process="@this" />
 											</p:selectBooleanCheckbox>
@@ -98,7 +98,7 @@
 							</div>
 							<hr />
 							<div class="row">
-								<label class="col-md-4 control-label" for="level">Usuario
+								<label class="col-md-4 control-label" for="asignatedUser">Usuario
 									Asignado:</label>
 								<div class="col-md-8">
 									<h:selectOneMenu id="asignatedUser"
