Almost there in Roles

--- a/src/main/webapp/admin/author.xhtml
+++ b/src/main/webapp/admin/author.xhtml
@@ -231,8 +231,8 @@
 
 	<!-- detail Modal -->
 	<h:form id="detailAuthorModalForm">
-		<div class="modal fade" id="detailModal" tabindex="-1"
-			role="dialog" aria-labelledby="Detalle de Especímenes">
+		<div class="modal fade" id="detailModal" tabindex="-1" role="dialog"
+			aria-labelledby="Detalle de Especímenes">
 			<div class="modal-dialog" role="document">
 				<div class="modal-content">
 					<div class="modal-header">
