--- a/src/main/webapp/admin/accesses.xhtml
+++ b/src/main/webapp/admin/accesses.xhtml
@@ -3,7 +3,41 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:p="http://primefaces.org/ui"
 	xmlns:f="http://java.sun.com/jsf/core">
+
+	<h:form id="deleteModalForm">
+		<div class="modal fade" id="deleteModal" tabindex="-1" role="dialog"
+			aria-labelledby="Eliminar registro">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal"
+							aria-label="Close">
+							<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+						</button>
+						<h4 class="modal-title" id="myModalLabel">Confirmar
+							eliminación</h4>
+					</div>
+					<div class="modal-body">¿Está seguro que desea eliminar este
+						registro?</div>
+					<div class="modal-footer">
+						<div class="input-group">
+							<p:commandButton id="deleteYesButton" value="Eliminar"
+								action="#{accessesBean.deleteRole}"
+								update="formRoles, deleteModalForm, createModalForm"
+								oncomplete="$('#deleteModal').modal('hide')" />
+							<p:commandButton id="deleteNoButton" value="Cancelar"
+								type="button" update="formRoles, createModalForm"
+								onclick="$('#deleteModal').modal('hide')" />
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</h:form>
+	<!-- delete form -->
 	
+	
+
 	<h:form id="formUsers">
 		<div class="panel panel-default">
 			<div class="panel-heading">Usuarios</div>
@@ -11,7 +45,7 @@
 				<div class="form-group">
 					<div class="row">
 						<label class="col-md-2 control-label" for="numeroIden">Numero
-						Identificación:</label>
+							Identificación:</label>
 						<div class="col-md-2">
 							<h:inputText id="numeroIden"
 								styleClass="ui-state-default form-control input-sm input-block-level required"
@@ -21,7 +55,7 @@
 							</h:inputText>
 						</div>
 						<label class="col-md-2 control-label" for="email">Correo
-						Electronico:</label>
+							Electronico:</label>
 						<div class="col-md-2">
 							<h:inputText id="email"
 								styleClass="ui-state-default form-control input-sm input-block-level required"
@@ -34,11 +68,13 @@
 					<div class="row">
 						<label class="col-md-2 control-label" for="ins">Institución:</label>
 						<div class="col-md-5">
-							<h:selectOneMenu id="ins" class="form-control" value="#{accessesBean.searchUser.idInstitution}"
-							    styleClass="ui-state-default form-control input-sm input-block-level required"
-							    converter="InstitutionConverter" >
-								<f:selectItem itemValue="#{null}" itemLabel="Selecciona"/>
-								<f:selectItems value="#{accessesBean.allInstitutions}" var="inst" itemLabel="#{inst.institutionName}"
+							<h:selectOneMenu id="ins" class="form-control"
+								value="#{accessesBean.searchUser.idInstitution}"
+								styleClass="ui-state-default form-control input-sm input-block-level required"
+								converter="InstitutionConverter">
+								<f:selectItem itemValue="#{null}" itemLabel="Selecciona" />
+								<f:selectItems value="#{accessesBean.allInstitutions}"
+									var="inst" itemLabel="#{inst.institutionName}"
 									itemValue="#{inst}" />
 								<p:ajax process="@this" />
 							</h:selectOneMenu>
@@ -58,7 +94,7 @@
 					actionListener="#{accessesBean.searchUser()}" update="formUsers"
 					value="Consultar" />
 				<p:commandButton id="clear"
-					actionListener="#{accessesBean.limpiarFiltros()}"
+					actionListener="#{accessesBean.limpiarUserFiltros()}"
 					update="formUsers" value="Limpiar" />
 			</div>
 			<h:dataTable id="dataTableUsers"
@@ -81,9 +117,21 @@
 					<f:facet name="header">Acciones</f:facet>
 					<p:commandLink id="viewButton"
 						class="btn btn-default btn-sm btn-action"
-						title="Editar #{users.userNames} #{users.userLastnames}" ajax="false">
-						<f:actionListener binding="#{navigationBean.setNavigablePage('modules.xhtml')}"/>
-    					<f:actionListener binding="#{accessesBean.loadUsersModules(users)}"/>
+						title="Ver y Editar accesos de #{users.userNames} #{users.userLastnames}"
+						ajax="false">
+						<f:actionListener
+							binding="#{navigationBean.setNavigablePage('modules.xhtml')}" />
+						<f:actionListener
+							binding="#{accessesBean.loadUsersModules(users)}" />
+						<span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+					</p:commandLink>
+					<p:commandLink id="editButton"
+						class="btn btn-default btn-sm btn-action"
+						title="Ver y Editar roles de #{users.userNames} #{users.userLastnames}"
+						ajax="false">
+						<f:actionListener
+							binding="#{navigationBean.setNavigablePage('roles.xhtml')}" />
+						<f:actionListener binding="#{accessesBean.loadUsersRoles(users)}" />
 						<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
 					</p:commandLink>
 				</h:column>
@@ -103,7 +151,8 @@
 								update="dataTableUsers, paginator">
 								<span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span>
 							</p:commandLink></li>
-						<ui:repeat id="pager" var="i" value="#{accessesBean.usersPager.pages}">
+						<ui:repeat id="pager" var="i"
+							value="#{accessesBean.usersPager.pages}">
 							<li><p:commandLink id="pageNumer"
 									actionListener="#{accessesBean.usersPager.getPageResults(i)}"
 									class="#{accessesBean.usersPager.currentPage == i? 'active-page': ''}"
@@ -117,6 +166,113 @@
 						<li><p:commandLink id="last" title="Última página"
 								actionListener="#{accessesBean.usersPager.lastPage()}"
 								update="dataTableUsers, paginator">
+								<span class="glyphicon glyphicon-chevron-right"
+									aria-hidden="true"></span>
+							</p:commandLink></li>
+					</ul>
+				</nav>
+			</h:panelGroup>
+		</div>
+		<p:growl id="messages" showDetail="true" />
+	</h:form>
+
+	<h:form id="formRoles">
+		<div class="panel panel-default">
+			<div class="panel-heading">Roles</div>
+			<div class="panel-body">
+				<div class="form-group">
+					<div class="row">
+						<label class="col-md-2 control-label" for="numeroIden">Nombre
+							del Rol:</label>
+						<div class="col-md-2">
+							<h:inputText id="name"
+								styleClass="ui-state-default form-control input-sm input-block-level required"
+								value="#{accessesBean.searchRole.roleName}">
+								<p:ajax process="@this" />
+								<f:validateBean disabled="true" />
+							</h:inputText>
+						</div>
+					</div>
+				</div>
+				<hr />
+				<h:panelGroup layout="block"
+					rendered="#{accessesBean.searchRoles != null and !accessesBean.searchRoles.isEmpty()}"
+					styleClass="pull-right">
+					<p>
+						Mostrando <b>#{accessesBean.searchRoles.size()}</b> de <b>#{accessesBean.rolesPager.numberOfResults}</b>
+						registros
+					</p>
+				</h:panelGroup>
+				<p:commandButton id="search"
+					actionListener="#{accessesBean.searchRole()}" update="formRoles"
+					value="Consultar" />
+				<p:commandButton id="clear"
+					actionListener="#{accessesBean.limpiarRoleFiltros()}"
+					update="formRoles" value="Limpiar" />
+				<p:commandButton id="create"
+					actionListener="#{accessesBean.limpiarRoleFiltros()}"
+					update="formRoles" value="Crear Rol" />
+			</div>
+			<h:dataTable id="dataTableRoles"
+				rendered="#{accessesBean.searchRoles != null and !accessesBean.searchRoles.isEmpty()}"
+				value="#{accessesBean.searchRoles}" var="roles"
+				styleClass="table table-hover table-condensed">
+				<h:column>
+					<f:facet name="header">Nombres</f:facet>
+					<h:outputText value="#{roles.roleName}" />
+				</h:column>
+				<h:column>
+					<f:facet name="header">Descripción</f:facet>
+					<h:outputText value="#{roles.roleDescr}" />
+				</h:column>
+				<h:column>
+					<f:facet name="header">Fecha Última Modificación</f:facet>
+					<h:outputText
+						value="#{accessesBean.formatDate(roles.roleModified)}" />
+				</h:column>
+				<h:column>
+					<f:facet name="header">Acciones</f:facet>
+					<p:commandLink id="viewButton"
+						class="btn btn-default btn-sm btn-action"
+						title="Editar accesos #{roles.roleName}" ajax="false">
+						<f:actionListener
+							binding="#{navigationBean.setNavigablePage('modules.xhtml')}" />
+						<f:actionListener
+							binding="#{accessesBean.loadRolesModules(roles)}" />
+						<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+					</p:commandLink>
+				</h:column>
+			</h:dataTable>
+			<h:panelGroup id="paginator"
+				rendered="#{accessesBean.searchRoles != null and !accessesBean.searchRoles.isEmpty()}">
+				<nav aria-label="Page navigation" class="paginador">
+					<ul class="pagination pagination-lg">
+						<li><p:commandLink id="first" title="Primera página"
+								actionListener="#{accessesBean.rolesPager.firstPage()}"
+								update="dataTableRoles, paginator">
+								<span class="glyphicon glyphicon-chevron-left"
+									aria-hidden="true"></span>
+							</p:commandLink></li>
+						<li><p:commandLink id="prev" title="Anterior página"
+								actionListener="#{accessesBean.rolesPager.previousPage()}"
+								update="dataTableRoles, paginator">
+								<span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span>
+							</p:commandLink></li>
+						<ui:repeat id="pager" var="i"
+							value="#{accessesBean.rolesPager.pages}">
+							<li><p:commandLink id="pageNumer"
+									actionListener="#{accessesBean.rolesPager.getPageResults(i)}"
+									class="#{accessesBean.rolesPager.currentPage == i? 'active-page': ''}"
+									update="formRoles:paginator, formRoles:dataTableRoles">#{i}</p:commandLink></li>
+						</ui:repeat>
+						<li><p:commandLink id="next" title="Siguiente página"
+								actionListener="#{accessesBean.rolesPager.nextPage()}"
+								update="dataTableRoles, paginator">
+								<span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>
+							</p:commandLink></li>
+						<li><p:commandLink id="last" title="Última página"
+								actionListener="#{accessesBean.rolesPager.lastPage()}"
+								update="dataTableRoles, paginator">
 								<span class="glyphicon glyphicon-chevron-right"
 									aria-hidden="true"></span>
 							</p:commandLink></li>
