--- a/src/main/webapp/admin/modules.xhtml
+++ b/src/main/webapp/admin/modules.xhtml
@@ -1,18 +1,24 @@
-<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:p="http://primefaces.org/ui" xmlns:f="http://java.sun.com/jsf/core">
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:p="http://primefaces.org/ui"
+	xmlns:f="http://java.sun.com/jsf/core">
 
 	<h:form id="formModule">
 		<div class="panel panel-default">
 			<div class="panel-heading">Accesos a módulos</div>
 			<div class="panel-body">
 				<div class="form-group">
-					<h:panelGroup layout="block" rendered="#{accessesBean.users != null}" styleClass="row">
+					<h:panelGroup layout="block"
+						rendered="#{accessesBean.users != null}" styleClass="row">
 						<label class="col-md-2 control-label" for="numeroIden">Usuario:</label>
 						<div class="col-md-6">
-							<h:outputText id="usuario" value="#{accessesBean.users.userNames} #{accessesBean.users.userLastnames}" />
+							<h:outputText id="usuario"
+								value="#{accessesBean.users.userNames} #{accessesBean.users.userLastnames}" />
 						</div>
 					</h:panelGroup>
-					<h:panelGroup layout="block" rendered="#{accessesBean.roles != null}" styleClass="row">
+					<h:panelGroup layout="block"
+						rendered="#{accessesBean.roles != null}" styleClass="row">
 						<label class="col-md-2 control-label" for="numeroIden">Rol:</label>
 						<div class="col-md-6">
 							<h:outputText id="role" value="#{accessesBean.roles.roleName}" />
@@ -20,7 +26,8 @@
 					</h:panelGroup>
 				</div>
 			</div>
-			<h:dataTable id="dataTableModules" value="#{accessesBean.modulesModel}" var="module"
+			<h:dataTable id="dataTableModules"
+				value="#{accessesBean.modulesModel}" var="module"
 				styleClass="table table-hover table-condensed">
 				<h:column>
 					<f:facet name="header">Módulo</f:facet>
@@ -28,36 +35,45 @@
 				</h:column>
 				<h:column>
 					<f:facet name="header">Lectura</f:facet>
-					<p:selectBooleanCheckbox id="read" value="#{module.readGranted}" disabled="#{module.inherited != null}">
+					<p:selectBooleanCheckbox id="read" value="#{module.readGranted}"
+						disabled="#{accessesBean.roles == null and module.inherited != null}">
 						<p:ajax process="@this" />
 					</p:selectBooleanCheckbox>
 				</h:column>
 				<h:column>
 					<f:facet name="header">Creación</f:facet>
-					<p:selectBooleanCheckbox id="create" value="#{module.createGranted}" disabled="#{module.inherited != null}">
+					<p:selectBooleanCheckbox id="create"
+						value="#{module.createGranted}"
+						disabled="#{accessesBean.roles == null and module.inherited != null}">
 						<p:ajax process="@this" />
 					</p:selectBooleanCheckbox>
 				</h:column>
 				<h:column>
 					<f:facet name="header">Actualización</f:facet>
-					<p:selectBooleanCheckbox id="update" value="#{module.updateGranted}" disabled="#{module.inherited != null}">
+					<p:selectBooleanCheckbox id="update"
+						value="#{module.updateGranted}"
+						disabled="#{accessesBean.roles == null and module.inherited != null}">
 						<p:ajax process="@this" />
 					</p:selectBooleanCheckbox>
 				</h:column>
 				<h:column>
 					<f:facet name="header">Eliminación</f:facet>
-					<p:selectBooleanCheckbox id="delete" value="#{module.deleteGranted}" disabled="#{module.inherited != null}">
+					<p:selectBooleanCheckbox id="delete"
+						value="#{module.deleteGranted}"
+						disabled="#{accessesBean.roles == null and module.inherited != null}">
 						<p:ajax process="@this" />
 					</p:selectBooleanCheckbox>
 				</h:column>
-				<h:column>
+				<h:column rendered="accessesBean.users != null">
 					<f:facet name="header">Origen Permiso</f:facet>
-					<h:outputText id="origin" value="#{module.inherited != null? module.inherited: 'Permiso Directo'}" />
+					<h:outputText id="origin"
+						value="#{module.inherited != null? module.inherited: (module.initialAccessCode != 0? 'Permiso directo': '')}" />
 				</h:column>
 			</h:dataTable>
 		</div>
 		<hr />
-		<p:commandButton id="saveButton" value="Guardar" actionListener="#{accessesBean.guardar()}" update="formModule" />
+		<p:commandButton id="saveButton" value="Guardar"
+			actionListener="#{accessesBean.guardarModulos()}" update="formModule" />
 		<p:commandButton id="returnButton" value="Regresar" ajax="false"
 			actionListener="#{navigationBean.setNavigablePage('accesses.xhtml')}" />
 		<hr />
